[package]
name = "rs-asn1-files2sostr"
version = "0.1.0"
edition = "2024"

description = "Converts files to a sequence of octet string values."
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-asn1-files2sostr/latest"
repository = "https://github.com/takanoriyanagitani/rs-asn1-files2sostr"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.der]
version = "0.7.10"
default-features = false
features = [
	"derive",
	"std",
]
